syntax = "proto3";

package community;

// Swift: "Proto"プレフィックスで生成してDiscovery型との衝突を避ける
option swift_prefix = "Proto";

service CommunityTransport {
    // Discover all peers
    rpc Discover(DiscoverRequest) returns (stream DiscoveredPeerID);

    // Resolve peer information
    rpc Resolve(ResolveRequest) returns (ResolveResponse);

    // Send data to a peer
    rpc Send(SendRequest) returns (SendResponse);

    // Subscribe to transport events
    rpc Subscribe(SubscribeRequest) returns (stream TransportEvent);

    // Register this peer with another peer
    rpc Register(RegisterRequest) returns (RegisterResponse);

    // Heartbeat for keepalive
    rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

// MARK: - Basic Types

message PeerInfo {
    string peerId = 1;
    string displayName = 2;
    map<string, string> metadata = 3;
}

// MARK: - Discover

message DiscoverRequest {
    int64 timeoutMilliseconds = 1;
}

message DiscoveredPeerID {
    string peerId = 1;
}

// MARK: - Resolve

message ResolveRequest {
    string peerId = 1;
}

message ResolveResponse {
    bool found = 1;
    PeerInfo peer = 2;
    int64 ttlSeconds = 3;
}

// MARK: - Send

message SendRequest {
    string targetPeerId = 1;
    string senderPeerId = 2;
    bytes data = 3;
    int64 timeoutMilliseconds = 4;
    string requestId = 5;
}

message SendResponse {
    bool success = 1;
    bytes data = 2;
    string errorMessage = 3;
}

// MARK: - Subscribe

message SubscribeRequest {
    string peerId = 1;
}

message TransportEvent {
    oneof event {
        PeerDiscoveredEvent peerDiscovered = 1;
        PeerLostEvent peerLost = 2;
        MessageReceivedEvent messageReceived = 3;
        ErrorEvent error = 4;
    }
}

message PeerDiscoveredEvent {
    string peerId = 1;
}

message PeerLostEvent {
    string peerId = 1;
}

message MessageReceivedEvent {
    string fromPeerId = 1;
    bytes payload = 2;
}

message ErrorEvent {
    int32 code = 1;
    string message = 2;
}

// MARK: - Register

message RegisterRequest {
    PeerInfo peer = 1;
}

message RegisterResponse {
    bool success = 1;
    string message = 2;
}

// MARK: - Heartbeat

message HeartbeatRequest {
    string peerId = 1;
    int64 timestampUnix = 2;
}

message HeartbeatResponse {
    bool acknowledged = 1;
    int64 serverTimestampUnix = 2;
}
